<resources>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt;&lt;br /&gt;on your smartphone or computer&lt;br /&gt;and enter this code</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="dgts__call_me">Call me</string>
    <string name="dgts__calling">Calling…</string>
    <string name="dgts__confirmation_code">Confirmation code</string>
    <string name="dgts__confirmation_edit_hint">Enter confirmation code</string>
    <string name="dgts__confirmation_error">Unable to confirm your phone number</string>
    <string name="dgts__confirmation_error_alternative">Sorry, we are having trouble sending you a confirmation code.</string>
    <string name="dgts__confirmation_expired">This code has expired. Please resend confirmation code.</string>
    <string name="dgts__continue">Continue</string>
    <string name="dgts__digits_logo_desc">digits logo icon</string>
    <string name="dgts__digits_logo_name_desc">digits logo name</string>
    <string name="dgts__dismiss">Dismiss</string>
    <string name="dgts__done">Done</string>
    <string name="dgts__email_request_edit_hint">Email address</string>
    <string name="dgts__email_request_title">Enter email address</string>
    <string name="dgts__find_your_friends">Find your friends</string>
    <string name="dgts__image_header_description">Image header for login</string>
    <string name="dgts__invalid_email">Invalid Email. Try Again</string>
    <string name="dgts__login_digits_text">Use my phone number</string>
    <string name="dgts__network_error">Please check your network and try again.</string>
    <string name="dgts__not_now">Not now</string>
    <string name="dgts__okay">Okay</string>
    <string name="dgts__phone_number_edit_hint">Your Number</string>
    <string name="dgts__phone_number_text">Enter your phone number</string>
    <string name="dgts__pin_code_verification_title">Enter 2-step verification code</string>
    <string name="dgts__resend_confirmation_text">Resend confirmation code</string>
    <string name="dgts__sending">Sending…</string>
    <string name="dgts__success_desc">Success Icon</string>
    <string name="dgts__terms_email_request">By tapping %1$sContinue%1$s you are adding this email to your Digits account. All your apps authenticated with Digits will have access to this email address, and their users will be able to discover you by email. Manage your account on %2$sDigits.com%3$s.</string>
    <string name="dgts__terms_text">By tapping %1$sContinue%1$s above, %2$sDigits by Twitter%3$s will send you an SMS message to confirm your phone number. Message &amp; data rates may apply.</string>
    <string name="dgts__terms_text_call_me">By tapping %1$sCall me%1$s above, %2$sDigits by Twitter%3$s will send you a voice call to confirm your phone number. Call &amp; data rates may apply.</string>
    <string name="dgts__terms_text_create">By tapping %1$sContinue%1$s above, you agree to the %2$sTerms of Service%3$s, %2$sPrivacy Policy%3$s, and %2$sCookies Policy%3$s of Digits by Twitter, and that other users of this app can discover you by phone number and/or email.</string>
    <string name="dgts__terms_text_sign_in">By tapping %1$sContinue%1$s above, you agree to the updated %2$sTerms of Service%3$s, %2$sPrivacy Policy%3$s, and %2$sCookies Policy%3$s of Digits by Twitter, and that other users of %1$s can discover you by phone number and/or email.</string>
    <string name="dgts__try_again">Try Again</string>
    <string name="dgts__try_again_confirmation">Please check your code and try again.</string>
    <string name="dgts__try_again_email">Please check your email and try again</string>
    <string name="dgts__try_again_phone_number">Please check your number and try again.</string>
    <string name="dgts__try_another_phone">Try a different phone number</string>
    <string name="dgts__unsupported_operator_error">Unable to send this number an SMS message.</string>
    <string name="dgts__upload_contacts">We use Digits by Twitter to find more of your friends who use this app. When you tap Okay, we\'ll upload your address book to Digits by Twitter so that we can help you find users of %1$s that you know or help other users of %1$s find you.</string>
    <string name="dgts__verification_code">Verification code</string>
    <string name="dgts_pin_code_terms">You have previously set a 2-step verification code on digits.com</string>
    <string name="tw__allow_btn_txt">Allow</string>
    <string name="tw__like_tweet">Like Tweet</string>
    <string name="tw__liked_tweet">Undo Like</string>
    <string name="tw__loading_tweet">Loading Tweet</string>
    <string name="setup_sport_selection_message">We\'ll configure Solos for your favorite sport first.\nYou can configure and use the other sport mode when you want to.</string>
    <string name="setup_sport_selection_step_header">CHOOSE YOUR FAVORITE SPORT</string>
    <string name="bt_Finished">Continue</string>
    <string name="bt_InstallUpdate">Install Update</string>
    <string name="bt_contactsupport">PLEASE CONTACT SUPPORT!</string>
    <string name="bt_errorsoccurred_fatal">Errors occurred while installing the update.\nYour device could not be recovered.</string>
    <string name="bt_instructions1">Please ensure that you have your headset connected to power and that it has at least 50% battery before you begin</string>
    <string name="bt_instructions2">During the software upgrade process you will see progress indicated here inside the app\nPlease do not switch off your headset or unplug it from power during this process</string>
    <string name="bt_instructions3">Press Install Update to begin!</string>
    <string name="default_rider_name">Default User</string>
    <string name="dob_default">1993,00,01</string>
    <string name="edittext_hint_password">Password</string>
    <string name="edittext_hint_username">Your Username</string>
    <string name="menu_command_battery_ant">Ant</string>
    <string name="menu_command_filter">Filter</string>
    <string name="menu_command_import_strava">Import Strava</string>
    <string name="menu_command_log">Log</string>
    <string name="menu_command_manage_routes">Manage Routes</string>
    <string name="menu_command_show_incomplete">Show incomplete</string>
    <string name="menu_command_strava_test">Strava test</string>
    <string name="menu_command_tp_test">TP test</string>
    <string name="menu_ghost_ride">Ghost Mode</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_navigate_ride">Navigate Using Ride</string>
    <string name="menu_ride_info">Ride Info</string>
    <string name="off">Off</string>
    <string name="pref_auto_start">Auto Start</string>
    <string name="pref_key_user_dob">date_of_birth</string>
    <string name="pref_key_user_name">user_name</string>
    <string name="pref_key_user_weight">user_weight</string>
    <string name="pref_pause_control">Auto Pause</string>
    <string name="pref_title_dob">Date Of Birth</string>
    <string name="pref_title_name">Name</string>
    <string name="pref_weight">Weight</string>
    <string name="setting_vocon_default_value">0</string>
    <string name="setting_voice_assistant">Voice Assistant</string>
    <string name="setup_cycling">CYCLING</string>
    <string name="setup_running">RUNNING</string>
    <string name="target">TARGET</string>
    <string name="text_logeed_in">Logged In</string>
    <string name="text_login">Log In</string>
    <string name="tp_empty_list_text1">Click on @ %s to open the Workout Builder.Select if you would like the workout to be based on Duration or Distance.</string>
    <string name="tp_empty_list_text2" formatted="false">Select how the intensity of the workout will be determined:% Functional Threshold Power. % Maximum Heart Rate. % of Threshold Heart Rate. % Threshold Speed(Pace).</string>
    <string name="tp_empty_list_text3">Set targets and drag pre-made workout building block templates. Once structured workout is created it can be exported and uploaded here.</string>
    <string name="tp_empty_list_title">Structured Workouts Builder</string>
    <string name="tp_logged_out_text2">The TrainingPeaks Workout Builder allows athletes and coaches to quickly and easily create structured workouts based on distance or duration using power, heart rate, pace, speed, or perceived exertion.</string>
    <string name="txt_heartzone_graph_time">TIME</string>
    <string name="txt_strava_loading">Loading</string>
    <string name="txt_training_peaks_login">Log Into Training Peaks</string>
    <string name="vc_title_distance">DISTANCE</string>
    <string name="you">YOU</string>
</resources>