<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res/com.kopin.solos" android:key="parent_screen">
    <com.kopin.solos.settings.ValidatedEditTextPreference
        android:title="@string/pref_title_name"
        android:key="@string/pref_key_user_name"
        android:defaultValue="@string/default_rider_name"
        custom:maxLength="@integer/name_len"/>
    <com.kopin.solos.settings.DatePickerPreference
        android:title="@string/pref_title_dob"
        android:selectable="true"
        android:key="@string/pref_key_user_dob"
        android:defaultValue="@string/dob_default"
        android:dialogTitle="@string/pref_title_dob"/>
    <com.kopin.solos.settings.ValidatedEditTextPreference
        android:title="@string/pref_weight"
        android:key="@string/pref_key_user_weight"
        android:defaultValue="@integer/weight_default"
        android:inputType="number"
        custom:minValue="@integer/weight_min"
        custom:maxValue="@integer/weight_max"
        custom:maxLength="@integer/weight_len"/>
</PreferenceScreen>
