<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/ic_sensors"
        android:id="@+id/menu_show_sensors"
        android:visible="false"
        android:orderInCategory="60"
        android:title=""
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_ant"
        android:orderInCategory="105"
        android:title="@string/menu_command_battery_ant"
        android:showAsAction="never"/>
    <item
        android:id="@+id/action_log"
        android:orderInCategory="110"
        android:title="@string/menu_command_log"
        android:showAsAction="never"/>
    <item
        android:id="@+id/action_strava"
        android:orderInCategory="120"
        android:title="@string/menu_command_strava_test"
        android:showAsAction="never"/>
    <item
        android:id="@+id/action_tp"
        android:orderInCategory="130"
        android:title="@string/menu_command_tp_test"
        android:showAsAction="never"/>
</menu>
