<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_incomplete"
        android:visible="false"
        android:orderInCategory="100"
        android:title="@string/menu_command_show_incomplete"
        android:showAsAction="never"/>
    <item
        android:icon="@drawable/ic_workouts"
        android:id="@+id/action_training"
        android:visible="true"
        android:orderInCategory="101"
        android:title="@string/menu_command_import_strava"
        android:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_strava_activities"
        android:id="@+id/action_import_strava"
        android:visible="true"
        android:orderInCategory="102"
        android:title="@string/menu_command_import_strava"
        android:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_my_routes"
        android:id="@+id/action_manage_routes"
        android:visible="true"
        android:orderInCategory="103"
        android:title="@string/menu_command_manage_routes"
        android:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_filter"
        android:id="@+id/action_filter"
        android:visible="true"
        android:orderInCategory="103"
        android:title="@string/menu_command_filter"
        android:showAsAction="always"/>
</menu>
