<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/setup_sport_selection_step_header"/>
    <Button
        android:id="@+id/btnRide"
        android:background="@drawable/btn_sport_selection"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/setup_cycling"
        android:onClick="onRideClick"
        android:drawableStart="@drawable/ic_bike_small"/>
    <Button
        android:id="@+id/btnRun"
        android:background="@drawable/btn_sport_selection"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/setup_running"
        android:onClick="onRunClick"
        android:drawableStart="@drawable/ic_stride_small"/>
    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup_sport_selection_message"
        android:lines="2"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_power_small"
        style="@style/SetupTextMessage"/>
</LinearLayout>
