<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_login"
        android:onClick="login"/>
    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_logout"
        android:onClick="logout"/>
    <TextView
        android:layout_gravity="center_horizontal"
        android:id="@+id/strava_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_strava_loading"/>
</LinearLayout>
