<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="14sp"
        android:textColor="@color/solos_orange"
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="Ramp Ups"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp">
        <TextView
            android:id="@+id/textTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_heartzone_graph_time"
            android:layout_weight="0.8"
            style="@style/TrainingStepSummary"/>
        <TextView
            android:id="@+id/textDistance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/vc_title_distance"
            android:layout_weight="0.8"
            style="@style/TrainingStepSummary"/>
        <TextView
            android:id="@+id/textTarget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/target"
            android:layout_weight="1.4"
            style="@style/TrainingStepSummary"/>
        <TextView
            android:id="@+id/textYou"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/you"
            android:layout_weight="1"
            style="@style/TrainingStepSummary"/>
    </LinearLayout>
</LinearLayout>
