<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/pageEmptyListTp"
    android:padding="10dp"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_gravity="center_horizontal"
        android:id="@+id/imageEmptyListTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_no_workouts"/>
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textEmptyListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tp_empty_list_title"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textEmptyList2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tp_logged_out_text2"/>
    <TextView
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_gravity="start|top"
        android:id="@+id/textInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tp_empty_list_text1"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_info_icon"/>
    <TextView
        android:textSize="15sp"
        android:textColor="@color/white"
        android:gravity="start|top"
        android:id="@+id/textInfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tp_empty_list_text2"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_info_icon"/>
    <TextView
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_gravity="start|top"
        android:id="@+id/textInfo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tp_empty_list_text3"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_info_icon"/>
</LinearLayout>
