<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center_horizontal"
        android:id="@+id/txt_Instructions1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="32dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/bt_instructions1"
        android:layout_alignParentStart="true"/>
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center_horizontal"
        android:id="@+id/txt_Instructions2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="10dp"
        android:text="@string/bt_instructions2"
        android:layout_below="@+id/txt_Instructions1"
        android:layout_alignParentStart="true"/>
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center_horizontal"
        android:id="@+id/txt_Instructions3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/bt_instructions3"
        android:layout_below="@+id/txt_Instructions2"
        android:layout_alignParentStart="true"/>
    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_InstallUpdate"
        style="?attr/confirmButtonStyle"/>
</RelativeLayout>
