<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_share_group">
        <item
            android:icon="@drawable/menu_item_ghost"
            android:id="@+id/menuGhostRider"
            android:title="@string/menu_ghost_ride"
            android:showAsAction="always"/>
        <item
            android:icon="@drawable/menu_item_nav"
            android:id="@+id/menuNav"
            android:title="@string/menu_navigate_ride"
            android:showAsAction="always"/>
        <item
            android:icon="@android:drawable/ic_menu_share"
            android:id="@+id/menuShare"
            android:title=""
            android:showAsAction="always"/>
        <item
            android:icon="@drawable/ic_info_icon"
            android:id="@+id/menuRideInfo"
            android:title="@string/menu_ride_info"
            android:showAsAction="always"/>
        <item
            android:id="@+id/action_dump_to_csv"
            android:visible="false"
            android:title="Dump to CSV"
            android:showAsAction="never"/>
        <item
            android:id="@+id/action_dump_to_tcx"
            android:visible="false"
            android:title="Export to TCX"
            android:showAsAction="never"/>
    </group>
</menu>
