<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="?attr/flashErrorIconStyle"/>
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center_horizontal"
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/bt_errorsoccurred_fatal"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"/>
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center_horizontal"
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bt_contactsupport"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"/>
    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_Finished"
        style="?attr/confirmButtonStyle"/>
</RelativeLayout>
