<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_training_peaks_logo"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/tp_login_ui"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/top_bar_margin">
        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/txt_training_peaks_login"/>
        <EditText
            android:textColor="@android:color/black"
            android:id="@+id/tp_username"
            android:background="@drawable/tp_edittext_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_hint_username"/>
        <EditText
            android:id="@+id/tp_password"
            android:background="@drawable/tp_edittext_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/edittext_hint_password"
            android:ems="10"
            android:inputType="textPassword"/>
        <Button
            android:textColor="@android:color/white"
            android:id="@+id/tp_button"
            android:background="@drawable/btn_tp_login"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_login"
            style="?android:attr/borderlessButtonStyle"/>
        <ProgressBar
            android:id="@+id/progressSpinner"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/tp_logged_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_logeed_in"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</LinearLayout>
